commit on master

--- a/docs/03_create_vm/03.md
+++ b/docs/03_create_vm/03.md
@@ -2,13 +2,13 @@
 
 ## Tujuan Pembelajaran
 
-1. ...
-2. ...
+1. Untuk mempelajari bagaimana cara membuat sebuah virtual machine melalui layanan cloud
+2. Untuk mempelajari bagaimana cara mengaktifkan sebuah virtual machine dan bagaimana cara menonaktifkannya
 
 ## Hasil Praktikum
 
 Berikut ini adalah bukti telah berhasil login ke halaman beranda akun oracle cloud.
 
-![Screenshot Dashboard Oracle](img/dashboard_oracle.png)
+![Screenshot Dashboard Oracle](img/)
 
 [contoh link](../../src/01_pengantar/hello.js)
