commit on https://github.com/ahmadfahry/cloud-3F-01.git

--- a/docs/03_create_vm/03.md
+++ b/docs/03_create_vm/03.md
@@ -9,6 +9,6 @@
 
 Berikut ini adalah bukti telah berhasil login ke halaman beranda akun oracle cloud.
 
-![Screenshot Dashboard Oracle](img/)
+![Screenshot Dashboard Oracle](img/Screen Shot 2021-09-28 at 12.44.50)
 
 [contoh link](../../src/01_pengantar/hello.js)
