commit on https://github.com/ahmadfahry/cloud-3F-01.git

--- a/docs/02_layanan_cloud/02.md
+++ b/docs/02_layanan_cloud/02.md
@@ -7,12 +7,27 @@ Infrastructure (OCI)
 
 ## Tugas 5 Layanan Oracle Cloud
 
-### Layanan 1: ....
+### Layanan 1: COMPUTE....
+Layanan OCI yang pertama yaitu ada Compute yang didalamnya fitur instances untuk membuat sebuah virtual machine
+lalu selain instances juga ada dedicated virtual machine host,instances configuration dan fitur fitur lainnya
 
 .....
 
-### Layanan 2: ....
+### Layanan 2: NETWORKING....
+Layanan OCI yang kedua adalah networking yang dimana isinya adalah DNS management untuk me management dns kita lalu
+ada Customer connectivity yang didalam nya ada fitur Site-to-site vpn 
+lalu ada ip management yang didalamnya ada fitur reserverd ip,BYOIP,pools
+
+### Layanan 3: Databases....
+Layanan OCI yang ketiga adalah databases yang didalam nya terdapat Mysql yang didalamnya terdapat fitur DB system ,Backup databases,channels dan configuration
+
+### Layanan 4: Marketplace....
+Layanan OCI yang keempat adalah marketplace yang didalamnya terdapat fitur yaitu my application untuk membeli aplikasi mau yang gratis ataupun berbayar selain my app ada community application dan accepted agreements lalu di bagian bawah terdapat service catalog yang isinya ada application,catalog manager,private application
+
+### Layanan 5: Migration....
+Layanan OCI yang kelima yaitu migration yang didalamnya ter dapat fitur fitur pertama yaitu Data transfer seperti export databases dan import databases lalu dibawahnya terdapat fitur Databases migration yang didalamnya terdapat fitur migration,registered databases,dan agents.
 
 .....
+
 
 
