--- a/docs/01_setup_account/01.md
+++ b/docs/01_setup_account/01.md
@@ -8,5 +8,6 @@
 
 Berikut ini adalah bukti telah berhasil login ke halaman beranda akun oracle cloud.
 
-![Screenshot Dashboard Oracle](Screen Shot 2021-09-28 at 12.26.31)
 
+
+<img width="1440" alt="Screen Shot 2021-12-18 at 00 24 39" src="https://user-images.githubusercontent.com/60720642/146583770-4cb7cf89-b032-4884-afea-8ef576243627.png">
