--- a/docs/03_create_vm/03.md
+++ b/docs/03_create_vm/03.md
@@ -7,8 +7,15 @@
 
 ## Hasil Praktikum
 
-Berikut ini adalah bukti telah berhasil login ke halaman beranda akun oracle cloud.
+1.Melakukan pembuatan vm dengan create instance dengan nama vm ubuntu-nim
+<img width="1440" alt="Screen Shot 2021-12-18 at 00 26 38" src="https://user-images.githubusercontent.com/60720642/146584301-948ab072-dd32-44bf-8bd8-41fd4f814779.png">
 
-![Screenshot Dashboard Oracle](img/Screen Shot 2021-09-28 at 12.44.50)
+2.Mengganti images vm dari linux menjadi ubuntu
+<img width="1440" alt="Screen Shot 2021-12-18 at 00 26 55" src="https://user-images.githubusercontent.com/60720642/146584431-57db1490-2729-4282-a71b-c35f9b768f73.png">
+<img width="1440" alt="Screen Shot 2021-12-18 at 00 26 59" src="https://user-images.githubusercontent.com/60720642/146584512-be66f3d8-72b7-4180-ad75-d3eb75e57e36.png">
 
-[contoh link](../../src/01_pengantar/hello.js)
+3.Mendownload ssh private key pada proses pembuatan vm
+<img width="1440" alt="Screen Shot 2021-12-18 at 00 27 07" src="https://user-images.githubusercontent.com/60720642/146584616-a4bde065-18d0-4e17-bb92-83a24cd86199.png">
+
+4.Hasil vm yang sudah terbuat dan berjalan
+<img width="1440" alt="Screen Shot 2021-12-18 at 00 27 29" src="https://user-images.githubusercontent.com/60720642/146584745-1b3beed1-5aaf-45cf-a0e6-2bfb20520528.png">
